<resources>
    <string name="app_name">GolfMate</string>

    <!-- strings for shared preferences in myProfile start -->
    <string name="name_profile">com.example.sullo.golfapp.SharedPreferences.fname</string>
    <string name="surname">com.example.sullo.golfapp.SharedPreferences.surname</string>
    <string name="exact_start">com.example.sullo.golfapp.SharedPreferences.exactStart</string>
    <string name="exact_end">com.example.sullo.golfapp.SharedPreferences.exactEnd</string>
    <!-- strings for shared preferences in myProfile end -->

    <string name="title_activity_maps_courses">Map</string>

    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="firstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="register">Register</string>
    <string name="title_activity_new_round">NewRound</string>
    <string name="title_activity_test">Test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="tv_lat_text">Latitude: N/A</string>
    <string name="tv_long_text">Longitude: N/A</string>

    <string-array name="county">
        <item>Dublin</item>
        <item>Wicklow</item>
        <item>Cork</item>
        <item>Wexford</item>
        <item>Waterford</item>
        <item>Kerry</item>
        <item>Galwayy</item>
        <item>Meath</item>
        <item>Sligo</item>

    </string-array>

    <!-- play round buttons start -->
    <string name="button_one">Singles</string>
    <string name="button_two">Fourball</string>
    <string name="button_three">Group</string>
    <string name="playgame">Play</string>
    <!-- play round buttons end -->

    <!-- popup up details start -->
    <string name="enter_item">Player Details</string>
    <string name="hint_name">Player Name</string>
    <string name="handicap_hint">Handicap</string>
    <string name="save_title">Save</string>
    <!-- popup up details end -->

    <!-- popup up details foursomes start -->
    <string name="enter_item_foursomes">Players Details</string>
    <string name="hint_name1">Player A Name</string>
    <string name="handicap_hint1">Handicap</string>
    <string name="hint_name2">Player B Name</string>
    <string name="handicap_hint2">Handicap</string>
    <!-- popup up details foursomes end -->

    <!-- playing round start -->
    <string name="image_playing_round">image here</string>
    <!-- playing round end -->

    <!-- tips dialog box start -->
    <string name="tipsTitle">Course Tips</string>
    <string name="BackToScoreCard">Back To Score Card</string>
    <string name="title_activity_greens">Map</string>
    <!-- tips dialog box end -->


</resources>
