<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/layout_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:background="#04c2e8">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/enter_item"
                    android:textColor="#353535"/>

                <EditText
                    android:id="@+id/nameFoursomes1"
                    android:layout_below="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name1"
                    android:textColor="#353535"
                    />

                <EditText
                    android:id="@+id/handicapFoursomes1"
                    android:layout_below="@+id/nameFoursomes1"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/handicap_hint1"
                    android:textColor="#353535"
                    />

                <EditText
                    android:id="@+id/nameFoursomes2"
                    android:layout_below="@+id/handicapFoursomes1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name2"
                    android:textColor="#353535"
                    />

                <EditText
                    android:id="@+id/handicapFoursomes2"
                    android:layout_below="@+id/nameFoursomes2"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/handicap_hint2"
                    android:textColor="#353535"
                    />

                <Button
                    android:id="@+id/saveButtonFoursomes"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/handicapFoursomes2"
                    android:text="@string/save_title"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:background="#353535"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </RelativeLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>