<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:background="#04c2e8">

                <TextView
                    android:id="@+id/courseNamePopUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="testing"
                    android:textColor="#FF0000"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/enter_item"
                    android:textColor="#353535"
                    android:layout_below="@+id/courseNamePopUp"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_below="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:textColor="#353535"
                    />

                <EditText
                    android:id="@+id/handicap"
                    android:layout_below="@+id/name"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/handicap_hint"
                    android:textColor="#353535"

                    />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/handicap"
                    android:text="Play"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:background="#353535"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>